Fixed Bugs on Client Deletion

--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="UTF-8">
 		<title>Yes Please!</title>
-		<link rel="stylesheet" type="text/css" href="/style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Changa:300" rel="stylesheet">
 	</head>
 	<body>
@@ -34,6 +34,6 @@
 			<button id="join-enter">Enter Room</button>
 			<button id="join-create">Create Room</button>
 		</div>
-		<script src="/script.js"> </script>
+		<script src="script.js"> </script>
 	</body>
 </html>
