--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div id="server-status" class="above">
-			<h3 id="message"> </h3>
+			<h3 id="server-message"> </h3>
 			<button id="server-status-clear"> Okay </button>
 		</div>
 		
