Spectator duplication fixed + style changes

--- a/web/index.html
+++ b/web/index.html
@@ -47,13 +47,13 @@
                     
                 </div>
                 <div id="room-side">
-                    <h3>Users</h3>
-                    <ul id="room-side-legend">
-                        <li class="user-player">Player</li>
-                        <li class="user-spectator">Spectator</li>
-                    </ul>
-                    <div id="room-players-container">
-                        <ul id="room-players"></ul>
+                    <h3>Players</h3>
+                    <div class="room-side-container">
+                        <ul id="room-players" class="room-side-list"></ul>
+                    </div>
+                    <h3>Spectators</h3>
+                    <div class="room-side-container">
+                        <ul id="room-spectators" class="room-side-list"></ul>
                     </div>
                 </div>
             </div>
