Implemented the room's main body, command system etc. + bug fixes

--- a/web/index.html
+++ b/web/index.html
@@ -35,7 +35,18 @@
             <h1 id="room-title"></h1>
             <div style="flex: 1 1; min-height: 0px;">
                 <div id="room-board">
-                    
+                    <div id="room-board-top">
+                        <div id="room-display"></div>
+                        <div id="room-input-result">
+                            <div id="room-close-result">
+                                <div class="room-close-result-x"
+                                     style="transform: rotate(45deg);"></div>
+                                <div class="room-close-result-x"
+                                     style="transform: rotate(-45deg);"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <input id="room-input-user" type="text">
                 </div>
                 <div id="room-side">
                     <h3>Players</h3>
